# PasswordManager

./: CMakeLists.txt  CMakePresets.json
apps/cli/src/: main.cpp
include/pm/: vault.h
src/: vault.cpp
